# codedia

./: .gitignore  .travis-push.sh  .travis.yml  README.rst  pyproject.toml
codedia/: cli.py
