[tool.poetry]
name = "diagram-dsl"
version = "0.1.0"
description = "A simple declarative DSL based in Python for drawing diagrams"
authors = ["Tanay PrabhuDesai <tanayseven@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
svgwrite = "^1.4"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
mypy = "^0.770"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
